# maglib

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  sode.cpp  sode.h
examples/fpgen/: footprint.npz  plot.py  run.py
examples/manifold_analysis/: lobe_analysis.py  trace_separatrix.py
examples/mfgen/: plot.py  run.py
examples/sode/: lorenz.py  sho.py
fpgen/: CMakeLists.txt  fpgen_input.txt  makefile  params.txt  tcabr_first_wall_m3dc1.txt
fpgen/src/: footprint.cpp  footprint.h  input_read.cpp  input_read.h  run.cpp  tcabr_collider.cpp  tcabr_collider.h
lbmap/: CMakeLists.txt  lbmap_input.txt  makefile  params.txt
lbmap/src/: input_read.cpp  input_read.h  intersections.cpp  intersections.h  lobe.cpp  lobe.h  run.cpp
maglit/: CMakeLists.txt  auxfields.cpp  auxfields.h  collider.cpp  collider.h  field_source.h  m3dc1_source.cpp  m3dc1_source.h  maglit.cpp  maglit.h  sode.cpp  sode.h  superposition_source.cpp  superposition_source.h
maglit/omp/: Makefile  test  test.cpp
maglit/tcabr_footprints/: cond.txt  input  makefile  params.txt  paths.txt  plot_test.ipynb  run  tcabr_collider.cpp  tcabr_collider.h  tcabr_first_wall  tcabr_first_wall_2.txt  tcabr_first_wall_m3dc1.txt  test  test.cpp  test.h
maglit/tcabr_footprints/source/: footprint.cpp  footprint.h  input_read.cpp  input_read.h  input_values.cpp  input_values.h  run.cpp  tcabr_collider.cpp  tcabr_collider.h
maglit/tcabr_lobes/: intersections.cpp  intersections.h  lobes  lobes.cpp  lobes.h  makefile  run.cpp
maglit/tcabr_manifolds/: findx.cpp  findx.h  makefile  params.txt  plot.ipynb  test.cpp  test_2.cpp  test_scatter.cpp  xpoint.ipynb
maglit/tcabr_manifolds/source/: input_read.cpp  input_read.h  manifold.cpp  manifold.h  run.cpp
magplot/: setup.py
magplot/magplot/: __init__.py  plots.py
mfgen/: CMakeLists.txt  makefile  mf_input.txt  mfgen_input.txt  params.txt
mfgen/src/: input_read.cpp  input_read.h  manifold.cpp  manifold.h  run.cpp
omp/: fio_omp  fio_omp.cpp  fio_omp02.cpp  fio_omp_01.cpp  fio_omp_02.cpp  korc_example.cpp  makefile  omp.cpp  omp_ex1.cpp  omp_ex2.cpp  omp_ex3.cpp  omp_ex4.cpp  omp_ex5.cpp  omp_ex6.cpp  ploop.1.cpp  test  test.cpp
python/: CMakeLists.txt
python/maglib/: __init__.py  crop_manifold.py  manifold_tools.py  plot.py
python/src/: bindings.h  collider_bindings.cpp  field_source_bindings.cpp  footprint_bindings.cpp  maglib_module.cpp  maglit_bindings.cpp  manifold_bindings.cpp  sode_bindings.cpp  sode_wrapper.cpp  sode_wrapper.h  superposition_source_bindings.cpp
sode/: CMakeLists.txt  sode.cpp  sode.h
tests/: CMakeLists.txt  test_collider.cpp  test_fpgen.cpp  test_integration.cpp  test_maglit.cpp  test_mfgen.cpp  test_sode.cpp
tests/python/: conftest.py  test_collider.py  test_footprint.py  test_maglit.py  test_manifold.py  test_manifold_tools.py  test_plot.py  test_sode.py
